src/assets/css/components.css
/* ... */
form input[type="text"]:focus,
form input[type="email"]:focus,
form input[type="password"]:focus,
form select:focus,
form textarea:focus {
    background: var(--color-input-focus-bg);
    box-shadow: var(--shadow-input-focus);
}

form input[type="text"]:focus-visible,
form input[type="email"]:focus-visible,
form input[type="password"]:focus-visible,
form select:focus-visible,
form textarea:focus-visible {
    outline: 2px solid var(--color-primary);
    outline-offset: 2px;
}

form textarea {
    height: 15em;
}

form .actions:last-child {
    margin-bottom: 0;
}

form ::-webkit-input-placeholder {
    color: var(--color-input-placeholder) !important;
}

form :-moz-placeholder {
    color: var(--color-input-placeholder) !important;
}

form ::-moz-placeholder {
    color: var(--color-input-placeholder) !important;
}

form :-ms-input-placeholder {
    color: var(--color-input-placeholder) !important;
}

form ::-moz-focus-inner {
    border: 0;
}

/* ===========================================
   Responsive: Large (981px – 1280px)
   =========================================== */
@media screen and (max-width: 1280px) {
    header {
        margin: 0 0 4em 0;
    }

    #top {
        padding: 8em 0;
    }

    #top .image {
        width: 24em;
        height: 24em;
        margin: 0;
    }
}

/* ===========================================
   Responsive: Medium (737px – 980px)
   =========================================== */
@media screen and (max-width: 980px) {
    #top {
        text-align: center;
        padding: 5em 0;
    }

    #top .image {
        margin: 0 auto 2em auto;
    }
}

/* ===========================================
   Responsive: Small (≤ 736px)
   =========================================== */
@media screen and (max-width: 736px) {
    /* Headings */
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        font-size: var(--font-size-lead);
        margin: 0 0 0.4em 0;
    }

    h1 {
        font-size: var(--font-size-h1-small);
        line-height: var(--line-height-h1-small);
    }

    header {
        margin: 0 0 var(--spacing-element) 0;
    }

    header > p {
        font-size: var(--font-size-lead);
    }

    footer {
        margin: 2.5em 0 0 0;
    }

    footer > p {
        font-size: var(--font-size-lead);
    }

    hr {
        margin: 1.5em 0 2em 0;
    }

    /* Section / Article */
    section,
    article {
        clear: both;
    }

    /* Button */
    input[type="button"],
    input[type="submit"],
    input[type="reset"],
    button,
    .button {
        text-align: center;
        font-size: var(--font-size-button-small);
        width: 100%;
        padding: 1em 0;
    }

    input[type="button"].large,
    input[type="submit"].large,
    input[type="reset"].large,
    button.large,
    .button.large {
        font-size: var(--font-size-button-small);
        letter-spacing: 0;
    }

    /* Social */
    ul.social {
        padding: 1em 0.5em 0;
    }

    ul.social li {
        margin: 0.5em;
    }

    ul.social li a {
        top: 0 !important;
    }

    ul.social li a {
        background-color: transparent !important;
        box-shadow: none;
    }

    ul.social li a svg {
        fill: var(--color-bg-white);
    }

    /* Actions */
    ul.actions {
        margin: 0;
    }

    ul.actions li {
        display: block;
        margin: 15px 0 0 0;
    }

    ul.actions li:first-child {
        margin-top: 0;
    }

    /* Box */
    .box {
        padding: 30px 20px;
        margin: 0 0 20px 0 !important;
    }

    .box h3 {
        margin-bottom: 0.25em;
    }

    .box .image.centered {
        margin-bottom: 1em;
    }

    .box .image.featured {
        position: relative;
        left: 20px;
        top: 20px;
        margin: -50px 0 50px -40px;
        width: auto;
    }

    .box.style1 {
        max-width: 32em;
        margin-left: auto !important;
        margin-right: auto !important;
    }

    .box.style2 {
        max-width: 32em;
        margin-left: auto !important;
        margin-right: auto !important;
    }

    /* Nav */
    #nav {
        height: var(--nav-height-small);
        line-height: var(--nav-height-small);
    }

    #nav a {
        padding: 0 0.75em;
        height: inherit;
        line-height: inherit;
        border-radius: 0;
    }

    #nav a:hover {
        background-color: transparent;
    }

    /* Article sections */
    #top {
        padding: 3em 0;
    }

    #top .image {
        width: 50vw;
        height: 50vw;
        max-width: 15em;
        max-height: 15em;
        margin-bottom: 0;
    }

    #top p {
        font-size: 1em;
    }

    #contact footer {
        margin: 0;
    }

    /* Copyright */
    #copyright {
        font-size: 1em;
        margin: 0;
    }

    #copyright li {
        display: block;
        margin: 1em 0 0 0;
        padding: 0;
        box-shadow: none;
        border-left: 0;
    }

    #copyright li:first-child {
        margin-top: 0;
    }
}

